[package]
name = "rust-mmt"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
