[package]
name = "rust-mmt"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
ssh2 = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
snmp = "0.2.2"
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }